--- a/index.html
+++ b/index.html
@@ -14,55 +14,55 @@
     <div class="container-piano">
         <main class="container" >
             <li>
-                <div class="w-key" data-note="C">C</div>
-                <div class="b-key black-C" data-note="C#">
+                <div class="w-key" data-key="65" data-note="C">C</div>
+                <div class="b-key black-C" data-key="87" data-note="C#">
                     <div class="in-key"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-note="D">D</div>
-                <div class="b-key black-D" data-note="D#">
+                <div class="w-key" data-key="83" data-note="D">D</div>
+                <div class="b-key black-D" data-key="69" data-note="D#">
                     <div class="in-key"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-note="E">E</div>
+                <div class="w-key" data-key="68" data-note="E">E</div>
             </li>
             <li>
-                <div class="w-key" data-note="F">F</div>
-                <div class="b-key black-F" data-note="F#">
+                <div class="w-key" data-key="70" data-note="F">F</div>
+                <div class="b-key black-F" data-key="84" data-note="F#">
                     <div class="in-key"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-note="G">G</div>
-                <div class="b-key black-G" data-note="G#">
+                <div class="w-key" data-key="71" data-note="G">G</div>
+                <div class="b-key black-G" data-key="89" data-note="G#">
                     <div class="in-key"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-note="A">A</div>
-                <div class="b-key black-A" data-note="A#">
+                <div class="w-key" data-key="72" data-note="A">A</div>
+                <div class="b-key black-A" data-key="85" data-note="A#">
                     <div class="in-key"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-note="B">B</div>
+                <div class="w-key" data-key="74" data-note="B">B</div>
             </li>
             <li>
-                <div class="w-key" data-note="C">C</div>
-                <div class="b-key black-C2" data-note="C#2">
+                <div class="w-key" data-key="75" data-note="C">C</div>
+                <div class="b-key black-C2" data-key="79" data-note="C#2">
                     <div class="in-key"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-note="D">D</div>
-                <div class="b-key black-D2" data-note="D#2">
+                <div class="w-key" data-key="76" data-note="D">D</div>
+                <div class="b-key black-D2" data-key="80" data-note="D#2">
                     <div class="in-key"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-note="E">E</div>
+                <div class="w-key" data-key="59" data-note="E">E</div>
             </li>
         </main>   
     </div>
