feat: implementation audio section

--- a/index.html
+++ b/index.html
@@ -14,58 +14,78 @@
     <div class="container-piano">
         <main class="container" >
             <li>
-                <div class="w-key" data-key="65" data-note="C">C</div>
-                <div class="b-key black-C" data-key="87" data-note="C#">
-                    <div class="in-key"></div>
+                <div class="w-key" data-key="65">C</div>
+                <div class="b-key black-C">
+                    <div class="in-key" data-key="87"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-key="83" data-note="D">D</div>
-                <div class="b-key black-D" data-key="69" data-note="D#">
-                    <div class="in-key"></div>
+                <div class="w-key" data-key="83">D</div>
+                <div class="b-key black-D">
+                    <div class="in-key" data-key="69"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-key="68" data-note="E">E</div>
+                <div class="w-key" data-key="68">E</div>
             </li>
             <li>
-                <div class="w-key" data-key="70" data-note="F">F</div>
-                <div class="b-key black-F" data-key="84" data-note="F#">
-                    <div class="in-key"></div>
+                <div class="w-key" data-key="70">F</div>
+                <div class="b-key black-F">
+                    <div class="in-key" data-key="84"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-key="71" data-note="G">G</div>
-                <div class="b-key black-G" data-key="89" data-note="G#">
-                    <div class="in-key"></div>
+                <div class="w-key" data-key="71">G</div>
+                <div class="b-key black-G">
+                    <div class="in-key" data-key="89"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-key="72" data-note="A">A</div>
-                <div class="b-key black-A" data-key="85" data-note="A#">
-                    <div class="in-key"></div>
+                <div class="w-key" data-key="72">A</div>
+                <div class="b-key black-A">
+                    <div class="in-key" data-key="85"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-key="74" data-note="B">B</div>
+                <div class="w-key" data-key="74">B</div>
             </li>
             <li>
-                <div class="w-key" data-key="75" data-note="C">C</div>
-                <div class="b-key black-C2" data-key="79" data-note="C#2">
-                    <div class="in-key"></div>
+                <div class="w-key" data-key="75" >C</div>
+                <div class="b-key black-C2">
+                    <div class="in-key" data-key="79"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-key="76" data-note="D">D</div>
-                <div class="b-key black-D2" data-key="80" data-note="D#2">
-                    <div class="in-key"></div>
+                <div class="w-key" data-key="76" >D</div>
+                <div class="b-key black-D2">
+                    <div class="in-key" data-key="80"></div>
                 </div>
             </li>
             <li>
-                <div class="w-key" data-key="59" data-note="E">E</div>
+                <div class="w-key" data-key="59">E</div>
             </li>
         </main>   
     </div>
+
+    <section class="audio">
+        <audio data-key="65" src="/sounds/040.wav"></audio>
+        <audio data-key="87" src="/sounds/041.wav"></audio>
+        <audio data-key="83" src="/sounds/042.wav"></audio>
+        <audio data-key="69" src="/sounds/043.wav"></audio>
+        <audio data-key="68" src="/sounds/044.wav"></audio>
+        <audio data-key="70" src="/sounds/045.wav"></audio>
+        <audio data-key="84" src="/sounds/046.wav"></audio>
+        <audio data-key="71" src="/sounds/047.wav"></audio>
+        <audio data-key="89" src="/sounds/048.wav"></audio>
+        <audio data-key="72" src="/sounds/049.wav"></audio>
+        <audio data-key="85" src="/sounds/050.wav"></audio>
+        <audio data-key="74" src="/sounds/051.wav"></audio>
+        <audio data-key="75" src="/sounds/052.wav"></audio>
+        <audio data-key="79" src="/sounds/053.wav"></audio>
+        <audio data-key="76" src="/sounds/054.wav"></audio>
+        <audio data-key="80" src="/sounds/055.wav"></audio>
+        <audio data-key="59" src="/sounds/056.wav"></audio>
+    </section>
 
     <script src="./src/main.js"></script>
 </body>
